# Ducky

./: .gitignore  Dockerfile  LICENSE  README.md  analysis.ipynb  anon.session  conversation_1729553707.txt  ducky.db  entrypoint.sh  localtest.sh  main.py  message_fetcher_session.session  requirements.txt  telegram_bot.py  top_users_summary.csv  web.py
.ipynb_checkpoints/: analysis-checkpoint.ipynb
brain/: Dockerfile  README.md
coins/: coins.py  prices.py
conversations/: .dockerignore  Cargo.toml
conversations/config/: default.toml
conversations/src/: config.rs  lib.rs  main.rs  threadpool.rs
conversations/src/db/: mod.rs  models.rs  pool.rs
conversations/src/handlers/: conversation.rs  health.rs  messages.rs  mod.rs
conversations/src/models/: message.rs  mod.rs
conversations/src/services/: claude.rs
db/: db_postgres.py  db_utils.py  init_postgres.py  migrate.py  pg_schema.py  schema.py  sdk.py
drizzlestudio/: README.md  bun.lockb  drizzle.config.js  index.ts  package.json
ducky/: bun.lockb  index.ts  nixpacks.toml  package.json  tsconfig.json
frontend/: bun.lockb  package.json  tailwind.config.ts
lib/: anthropic.py  ollama.py  raydium.py  sdk.py  telegram.py  twitter.py
memory/: bun.lockb  drizzle.config.ts  index.ts  newDBMigration.ts  package.json
sentiment_analysis/: .~lock.top_negative_messages.csv#  analysis_core.py  dframes.py  to_csv.py  top_positive_messages.csv
static/: archive.html  index.html  navbar.html
telegram-bot/: message_fetcher.py  sentiment-analysis.py  sentiment-visual.py
telegram_messages/: message_fetcher.py
(+205 files in other folders)
