[package]
name = "message_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
deadpool-postgres = "0.14"
uuid = { version = "1.0", features = ["serde", "v4"] }
metrics = "0.24.0" 
metrics-exporter-prometheus = "0.16.0"
config = "0.14.1"
async-priority-queue = "0.1.1"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
time = "0.3"
bytes = "1.0"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }